@@ -1,19 +1,24 @@
 package com.ZzicGo.service;
 
+import com.ZzicGo.domain.challenge.Challenge;
 import com.ZzicGo.domain.challenge.ChallengeParticipation;
+import com.ZzicGo.domain.challenge.ParticipationStatus;
 import com.ZzicGo.domain.history.History;
 import com.ZzicGo.domain.history.ImageUrl;
 import com.ZzicGo.domain.history.Visibility;
-import com.ZzicGo.dto.HistoryRequestDto;
+import com.ZzicGo.domain.user.User;
 import com.ZzicGo.dto.HistoryResponseDto;
 import com.ZzicGo.exception.ChallenegeException;
 import com.ZzicGo.exception.HistoryException;
+import com.ZzicGo.exception.UserException;
 import com.ZzicGo.global.CustomException;
 import com.ZzicGo.global.s3.S3Uploader;
-import com.ZzicGo.repository.ChallengeParticipationRepository;
-import com.ZzicGo.repository.ChallengeRepository;
-import com.ZzicGo.repository.HistoryRepository;
+import com.ZzicGo.repository.*;
+import com.ZzicGo.util.Cursor;
+import com.ZzicGo.util.CursorEncoder;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -21,6 +26,8 @@ import org.springframework.web.multipart.MultipartFile;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,6 +38,9 @@ public class HistoryService {
     private final HistoryRepository historyRepository;
     private final S3Uploader s3Uploader;
     private final ChallengeRepository challengeRepository;
+    private final CursorEncoder cursorEncoder;
+    private final ImageUrlRepository imageUrlRepository;
+    private final UserRepository userRepository;
 
     public Long createHistory(Long participationId, Long loginUserId, List<MultipartFile> images, String content, Visibility visibility) {
 
@@ -97,7 +107,7 @@ public class HistoryService {
 
 
     @Transactional(readOnly = true)
-    public HistoryResponseDto.HistoryListResponse getHistories(Long loginUserId, Long challengeId, Visibility visibility) {
+    public HistoryResponseDto.CursorResponse getHistories(Long loginUserId, Long challengeId, Visibility visibility, String cursor, int size) {
 
         // 🔥 챌린지가 존재하는지 검증
         boolean exists = challengeRepository.existsById(challengeId);
@@ -105,33 +115,69 @@ public class HistoryService {
             throw new CustomException(ChallenegeException.CHALLENGE_NOT_FOUND);
         }
 
-        // 🔥  참여 주인인지 검증
-        boolean isMember = participationRepository.existsByChallenge_IdAndUser_Id(challengeId, loginUserId);
-        if (!isMember) {
-            throw new CustomException(ChallenegeException.PARTICIPATION_FORBIDDEN);
-        }
+        // 🔥 유저 조회
+        User user = userRepository.findById(loginUserId)
+                .orElseThrow(() -> new CustomException(UserException.NOT_EXIST_USER));
 
-        // TODO: 탈퇴했을 경우 검증
+        // 🔥 참여 엔티티 조회 (참여자인지 검증)
+        ChallengeParticipation participation = participationRepository
+                .findByUserAndChallenge(user, Challenge.builder().id(challengeId).build())
+                .orElseThrow(() -> new CustomException(ChallenegeException.PARTICIPATION_FORBIDDEN));
+
+        // 🔥 참여 상태가 JOINED인지 검증
+        if (!participation.getStatus().isJOINED()) {
+            throw new CustomException(ChallenegeException.PARTICIPATION_ALREADY_LEFT);
+        }
+        
+        Cursor decoded = cursorEncoder.decode(cursor);
+        Pageable pageable = PageRequest.of(0, size);
 
         // 🔥 히스토리 조회
-        List<History> histories = historyRepository.findByChallengeAndVisibility(challengeId, visibility);
+        List<History> histories = historyRepository.findHistoryByCursor(
+                challengeId,
+                visibility,
+                decoded == null ? null : decoded.getCreatedAt(),
+                decoded == null ? null : decoded.getId(),
+                pageable
+        );
+        List<Long> ids = histories.stream().map(History::getId).toList();
 
+        List<ImageUrl> images = ids.isEmpty()
+                ? List.of()
+                : imageUrlRepository.findByHistoryIds(ids);
 
-        // 🔥 History → DTO 변환
-        List<HistoryResponseDto.HistoryItem> result = histories.stream()
-                .map(h -> HistoryResponseDto.HistoryItem.builder()
-                        .historyId(h.getId())
-                        .content(h.getContent())
-                        .visibility(h.getVisibility().name())
-                        .images(
-                                h.getImages().stream()
-                                        .map(img -> s3Uploader.getPresignedUrl(img.getImageUrl()))
-                                        .toList()
+        Map<Long, List<String>> imageMap = images.stream()
+                .collect(Collectors.groupingBy(
+                        img -> img.getHistory().getId(),
+                        Collectors.mapping(
+                                img -> s3Uploader.getPresignedUrl(img.getImageUrl()),
+                                Collectors.toList()
                         )
-                        .build()
-                )
-                .toList();
+                ));
 
-        return new HistoryResponseDto.HistoryListResponse(result);
+        List<HistoryResponseDto.HistoryItem> items = histories.stream()
+                .map(h -> new HistoryResponseDto.HistoryItem(
+                        h.getId(),
+                        h.getContent(),
+                        h.getVisibility().name(),
+                        imageMap.getOrDefault(h.getId(), List.of())
+                ))
+                .toList();
+        // next cursor
+        String nextCursor = null;
+        boolean hasMore = false;
+
+        if (!histories.isEmpty()) {
+            History last = histories.get(histories.size() - 1);
+
+            nextCursor = cursorEncoder.encode(
+                    last.getCreatedAt(),
+                    last.getId()
+            );
+
+            hasMore = true;
+        }
+
+        return new HistoryResponseDto.CursorResponse(items, nextCursor, hasMore);
     }
 }
